...
                            ),
                          ),
                        ),
                        Column(
                          children: <Widget>[
                            TOTextInput(
                              key: Key('login-mail'),
                              hinttext: 'Email',
                              password: false,
                              texterror: 'Por favor verificar email',
                              value: controllerform['email'],
                              error: errores['email'],
                              teclado: TextInputType.emailAddress,
                            ),
                            TOTextInput(
                              key: Key('login-password'),
                              hinttext: 'Contraseña',
                              password: true,
                              value: controllerform['password'],
                              texterror: 'Por favor verificar contraseña',
                              error: errores['password'],
                            ),
...
                                      ),
                                      padding: EdgeInsets.all(0),
                                      onPressed: () => {enviarform(context)},
                                      child: Row(
                                        children: <Widget>[
                                          Expanded(
                                            key: Key('login-button'),
                                            child: Center(
                                              child: !loading
                                                  ? Text(
                                                      'Iniciar Sesión',
                                                      style: TextStyle(fontWeight: FontWeight.w700, color: Colors.white),
                                                    )
...
